Bug 1786564 allow access to static theme resources in extensions r=rpl,necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D156618